# pike

./: Cargo.toml  Justfile  README.md
.github/workflows/: ci-cd.yaml  ci-cd.yml  linux-ci.yaml  windows-ci.yml
docs/: dev-docs.md  final-docs.md  preliminary-docs.md  usage.md
src/: app.rs  config.rs  key_shortcut.rs  main.rs  operations.rs  pike.rs  test_util.rs  ui.rs  welcome_pike.rs
src/snapshots/: pike__app__tests__app_render_buffer_contents.snap  pike__app__tests__app_render_empty_buffer.snap  pike__app__tests__app_render_file_input_after_handling_open_file_keybind.snap  pike__app__tests__app_render_search_results.snap  pike__app__tests__app_render_with_search_input.snap  pike__app__tests__app_renders_no_file_input_after_closing.snap  pike__app__tests__render_app.snap
