[package]
name = "pike"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
crossterm = "0.28.1"
dirs = "5.0.1"
ratatui = { version = "0.29.0", features = ["macros"] }
scribe = { git="https://github.com/mbienkowsk/scribe", branch="main" }
tempfile = "3.14.0"
toml = "0.8.19"
tui-input = "0.11.1"
